--- a/src/index.css
+++ b/src/index.css
@@ -195,3 +195,42 @@ body {
   height: 560px;
   object-fit: cover;
 }
+
+/* 반응형 모바일*/
+@media only screen and (max-width: 600px) {
+  .title {
+    text-align: center;
+    font-size: 30px;
+  }
+  .search-input {
+    width: 70%;
+  }
+
+  .wrapper {
+    background-color: white;
+    padding: 0 30px 0 30px;
+    width: 900px;
+    height: 400px;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 5px 10px 10px 1px rgba(0, 0, 0, 0.3);
+  }
+
+  .wrapper > header {
+    height: 60px;
+  }
+  .details {
+    margin-left: 1%;
+    font-size: 0.9rem;
+  }
+  .buttons {
+    padding: 0px;
+    margin-right: 1%;
+  }
+
+  .preview-img > .img > img {
+    width: 100%;
+    height: 310px;
+    object-fit: cover;
+  }
+}
